Adicionado Título da Etiqueta

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <fieldset class="m-3 d-inline">
         <legend>Configuração do lote de etiquetas</legend>
         <label class="col-form-label float-start" for="inicio">Valor inicial:</label>
-        <input class="form-control" id="inicio" name="inicio" placeholder="9900000001" size="10" type="number">
+        <input class="form-control" id="inicio" name="inicio" placeholder="9900000001" size="10" type="number" required>
         <label class="col-form-label" for="quantidade">Quantidade:</label>
-        <input class="form-control" id="quantidade" name="qtd" placeholder="65" size="4" type="number">
+        <input class="form-control" id="quantidade" name="qtd" placeholder="65" size="4" type="number" required>
         <button class="btn btn-primary mt-3" type="submit">Gerar
             Impressão
         </button>
